--- a/frontend/src/styles/base.css
+++ b/frontend/src/styles/base.css
@@ -1,4 +1,3 @@
-@import 'tailwindcss';
 @import 'tw-animate-css';
 @import './shadcdn-style.css';
-@import './tailwind-style.css';
+@import './tailwind.css';
